Fixing text size to stop zoom in on mobile

--- a/frontend/cart/cart.css
+++ b/frontend/cart/cart.css
@@ -126,6 +126,7 @@ header {
     box-sizing: border-box;
     border: 1px solid black;
     border-radius: 5px;
+    font-size: 18px;
 }
 
 .total {
@@ -135,7 +136,7 @@ header {
     border-radius: 5px;
     background-color: rgb(248, 248, 248);
     text-align: center;
-    font-size: 16pt;
+    font-size: 22px;
 }
 
 .total p {
@@ -170,6 +171,7 @@ header {
 
 .customerInfo input[type=text], .customerInfo input[type=datetime-local], .customerInfo input[type=tel] {
     width: 100%;
+    font-size: 18px;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -246,21 +248,19 @@ header {
     margin: 8px 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    font-size: 12pt;
+    font-size: 18px;
     resize: vertical;
 }
 
 .submit {
     width: 100%;
-    /* margin: 1rem; */
     background-color: rgb(66, 176, 255); /* Green */
     border: none;
-    color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 11pt;
+    font-size: 18px;
     -webkit-appearance: none;
     -moz-appearance: none;
 }
